[gd_scene load_steps=2 format=3 uid="uid://chrkgpkk8nafy"]

[ext_resource type="Script" path="res://addons/planet_plugin/scenes/planet_dock/planet_dock.gd" id="1_xrkxw"]

[node name="PlanetDock" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xrkxw")

[node name="AddPlanetBtn" type="Button" parent="."]
layout_mode = 2
text = "Add Planet"

[connection signal="pressed" from="AddPlanetBtn" to="." method="_on_add_planet_btn_pressed"]
